application/brennoflavio/sitio/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sitio
  namespace: sitio
  labels:
    app: sitio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sitio
  template:
    metadata:
      labels:
        app: sitio
    spec:
      automountServiceAccountToken: false
      securityContext:
        fsGroup: 10001
      containers:
        - name: sitio
          image: git.brennoflavio.com.br/brennoflavio/confirmacoes-sitio:f081542
          ports:
            - containerPort: 8000
          startupProbe:
            tcpSocket:
              port: 8000
            failureThreshold: 30
            periodSeconds: 2
          readinessProbe:
            tcpSocket:
              port: 8000
          livenessProbe:
            tcpSocket:
              port: 8000
          securityContext:
            runAsUser: 10001
            runAsGroup: 10001
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - name: sitio-data
              mountPath: /data
          resources:
            limits:
              memory: 128Mi
            requests:
              cpu: 10m
              memory: 64Mi
      volumes:
        - name: sitio-data
          persistentVolumeClaim:
            claimName: sitio-data
