application/brennoflavio/sitio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sitio
  namespace: sitio
spec:
  type: ClusterIP
  selector:
    app: sitio
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
