application/brennoflavio/sitio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sitio
  namespace: sitio
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt
    external-dns.alpha.kubernetes.io/target: "brennoflavio.com.br"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: external-nginx
  rules:
    - host: sitio.brennoflavio.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sitio
                port:
                  number: 80
  tls:
    - hosts:
        - sitio.brennoflavio.com.br
      secretName: sitio-tls
